--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Retail Promotion Classification-Prediction Problem**\n",
+    "# Retail Promotion Classification-Prediction Problem\n",
+    "## Vasundhara Bagchi, Elizabeth Slesarev, and Paul Beltran \n",
     "\n",
     "Through this project, we are aiming to use retail sales data to understand how the stores could run a promotional campaign targeting specific customer profiles.\n",
     "\n",
@@ -19,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Step 1: Data Cleaning and Preprocessing***"
+    "### Step 1: Data Cleaning and Preprocessing"
    ]
   },
   {
@@ -750,7 +751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Starting the Machine Learning Process "
+    "### Starting the Machine Learning Process "
    ]
   },
   {
@@ -1007,6 +1008,14 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.25, random_state=125\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian Naive Bayes "
    ]
   },
   {
@@ -1288,6 +1297,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian Naive Bayes with Oversampling "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 547,
    "metadata": {},
@@ -1338,7 +1355,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy went up by 6%! However, we want to fintune this a bit more. Let's run a random forest classifier to determine how important certain features are, and get rid of unimportant ones."
+    "Accuracy went up by 6%! However, we want to fine tune this a bit more. Let's run a random forest classifier to determine how important certain features are, and get rid of unimportant ones."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier"
    ]
   },
   {
@@ -1420,6 +1445,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian Naive Bayes without unimportant features "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 550,
    "metadata": {},
@@ -1477,7 +1510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nueral Networks:"
+    "### Neural Networks:"
    ]
   }
  ],
@@ -1497,7 +1530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
