added paul's changes

--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -1562,7 +1562,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hmmm, seems like the gender feature really did not matter in the long run. Lets try another classification technique instead!"
+    "Hmmm, seems like the gender feature really did not matter in the long run. Lets try another classification technique instead!\n",
+    "(To learn more about stratified k-fold cross validation, visit here for more info: https://www.geeksforgeeks.org/stratified-k-fold-cross-validation/)"
    ]
   },
   {
@@ -1788,7 +1789,7 @@
    "source": [
     "# Split the data into features and target\n",
     "X = df_dummy\n",
-    "y = df_y_dummy\n",
+    "y = df['category']\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
@@ -1808,11 +1809,33 @@
     }
    ],
    "source": [
-    "model = MLPClassifier(hidden_layer_sizes=(16, 8), activation='relu', solver='adam', max_iter=500, random_state=42)\n",
+    "model = MLPClassifier(hidden_layer_sizes=(16, 8), activation='relu', solver='adam', max_iter=1500, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "accuracy = model.score(X_test, y_test)\n",
     "print(f'Test accuracy: {accuracy:.4f}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the neural network performed very well, with a test accuracy of 89.65%. Compare this to the accuracy of the Naive Bayes classifier of 81.5% and a massive difference is evident.\n",
+    "\n",
+    "To learn more about Neural Networks, I highly recommend 3b1b's video series: https://www.youtube.com/watch?v=aircAruvnKk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "cm2 = confusion_matrix(y_test, y_pred, labels=[\"Clothing\", \"Cosmetics\", \"Food & Beverage\", \"Technology\"])\n",
+    "disp2 = ConfusionMatrixDisplay(confusion_matrix=cm2, display_labels=[\"Clothing\", \"Cosmetics\", \"Food & Beverage\", \"Technology\"])\n",
+    "disp2.plot();"
    ]
   },
   {
