--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -1930,6 +1930,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#KNN - 10 fold validation \n",
+    "\n",
+    "kf = StratifiedKFold(n_splits=10,random_state=40, shuffle=True) \n",
+    "accscore = []\n",
+    "classifier = KNeighborsClassifier(n_neighbors = 6, metric = 'minkowski', p = 2)\n",
+    "\n",
+    "for train_index , test_index in kf.split(X, y):\n",
+    "    X_train , X_test = X.iloc[train_index],X.iloc[test_index]\n",
+    "    y_train , y_test = y.iloc[train_index] , y.iloc[test_index]\n",
+    "     \n",
+    "    #classifier.fit(X_train,y_train)\n",
+    "    classifier.fit(X_train, y_train)\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "     \n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    accscore.append(acc)\n",
+    "     \n",
+    "avgscore = sum(accscore)/10\n",
+    " \n",
+    "print(\"Accuracy from each fold using KNN with 6 neighbors = \" + str(accscore))\n",
+    "print(\"Average accuracy using KNN with 6 neighbors = \" + str(avgscore))\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "fscore = f1_score(y_test, y_pred, average=None)\n",
+    "\n",
+    "print(\"The F-scores for each class using KNN =\")\n",
+    "print(\"F-score for Normal fetuses:\" + str( fscore[0]))\n",
+    "print(\"F-score for Suspect Fetuses 2:\" + str( fscore[1]))\n",
+    "print(\"F-score for Pathological fetuses:\" + str( fscore[2]))\n",
+    "print()\n",
+    "print(\"Confusion Matrix:\")\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=classifier.classes_)\n",
+    "disp.plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
