--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -1927,15 +1927,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy from each fold using KNN with 35 neighbors = [0.9617935409457901, 0.9633794694348328, 0.9662629757785467, 0.9630911188004614, 0.96280276816609, 0.9688581314878892, 0.9679884643114636, 0.9656813266041817, 0.9665465032444124, 0.9627974044700793]\n",
+      "Average accuracy using KNN with 35 neighbors = 0.9649201703243747\n",
+      "Average fscore using KNN with 35 neighbors = 0.9649201703243747\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#KNN - 10 fold validation \n",
     "\n",
     "kf = StratifiedKFold(n_splits=10,random_state=40, shuffle=True) \n",
     "accscore = []\n",
-    "classifier = KNeighborsClassifier(n_neighbors = 6, metric = 'minkowski', p = 2)\n",
+    "fscorearr = []\n",
+    "classifier = KNeighborsClassifier(n_neighbors = 35, metric = 'minkowski', p = 2)\n",
     "\n",
     "for train_index , test_index in kf.split(X, y):\n",
     "    X_train , X_test = X.iloc[train_index],X.iloc[test_index]\n",
@@ -1947,26 +1959,17 @@
     "     \n",
     "    acc = accuracy_score(y_test, y_pred)\n",
     "    accscore.append(acc)\n",
+    "    fscore = f1_score(y_test, y_pred, average=None)\n",
+    "    fscorearr.append(fscore)\n",
+    "\n",
     "     \n",
     "avgscore = sum(accscore)/10\n",
+    "avgfscore = sum(fscore)/10\n",
     " \n",
-    "print(\"Accuracy from each fold using KNN with 6 neighbors = \" + str(accscore))\n",
-    "print(\"Average accuracy using KNN with 6 neighbors = \" + str(avgscore))\n",
-    "print()\n",
-    "\n",
-    "\n",
-    "fscore = f1_score(y_test, y_pred, average=None)\n",
-    "\n",
-    "print(\"The F-scores for each class using KNN =\")\n",
-    "print(\"F-score for Normal fetuses:\" + str( fscore[0]))\n",
-    "print(\"F-score for Suspect Fetuses 2:\" + str( fscore[1]))\n",
-    "print(\"F-score for Pathological fetuses:\" + str( fscore[2]))\n",
-    "print()\n",
-    "print(\"Confusion Matrix:\")\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=classifier.classes_)\n",
-    "disp.plot()\n",
-    "plt.show()"
+    "print(\"Accuracy from each fold using KNN with 35 neighbors = \" + str(accscore))\n",
+    "print(\"Average accuracy using KNN with 35 neighbors = \" + str(avgscore))\n",
+    "print(\"Average fscore using KNN with 35 neighbors = \" + str(avgscore))\n",
+    "print()"
    ]
   },
   {
