--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -1871,6 +1871,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_knn = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing the ages\n",
+    "min_age = df_for_knn['age'].min()\n",
+    "max_age = df_for_knn['age'].max()\n",
+    "\n",
+    "# Apply min-max normalization to the 'age' column\n",
+    "df_for_knn['normalized_age'] = (df_for_knn['age'] - min_age) / (max_age - min_age)\n",
+    "\n",
+    "# Normalize the prices\n",
+    "min_price = df_for_knn['total_price'].min()\n",
+    "max_price = df_for_knn['total_price'].max()\n",
+    "\n",
+    "# Apply min-max normalization to the 'price' column\n",
+    "df_for_knn['normalized_price'] = (df_for_knn['total_price'] - min_price) / (max_price - min_price)\n",
+    "\n",
+    "# drop converted columns\n",
+    "df_for_knn.drop(['total_price', 'age', 'shopping_mall'], axis=1, inplace=True)\n",
+    "\n",
+    "df_for_knn.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming your DataFrame is named 'df' and has columns 'normalized_age', 'normalized_price', and 'category'\n",
+    "# Replace these with your actual column names\n",
+    "\n",
+    "# Create a dictionary to map class labels to colors\n",
+    "class_colors = {'Clothing': 'red', 'Cosmetics': 'blue', 'Technology': 'green', 'Food & Beverage': 'purple'}\n",
+    "\n",
+    "# Plotting the scatter plot\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "for category, color in class_colors.items():\n",
+    "    class_data = df_for_knn[df_for_knn['category'] == category]\n",
+    "    plt.scatter(class_data['normalized_age'], class_data['normalized_price'], color=color, label=category)\n",
+    "\n",
+    "plt.xlabel('Normalized Age')\n",
+    "plt.ylabel('Normalized Price')\n",
+    "plt.title('Scatter Plot of Data Points')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -1908,7 +1972,7 @@
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "classifier = KNeighborsClassifier(n_neighbors = 30, metric = 'minkowski', p = 2)\n",
+    "classifier = KNeighborsClassifier(n_neighbors = 50, metric = 'minkowski', p = 2)\n",
     "classifier.fit(X_train, y_train)\n",
     "Y_pred = classifier.predict(X_test)\n",
     "\n",
