added part 3 for knn

--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -21,6 +21,10 @@
     "Our updated problem statement now focuses on a predictive model for shopper segmentation, where shoppers are grouped into distinct categories based on their preferences and purchase patterns. Eg: Technology enthusiasts, food connoisseurs, fashion-conscious individuals, and beauty enthusiasts.\n",
     "This segmentation would help businesses optimize marketing strategies through targeted promotional campaigns and personalized recommendations to ultimately increase customer retention while optimizing their resources.\n",
     "\n",
+    "**Part 3:**\n",
+    "\n",
+    "Let's do some extra experimentation, is our data truly seperable?\n",
+    "\n",
     "### About the dataset \n",
     "This particular dataset contains data from various age groups and genders several categories from 10 shopping malls in Istanbul, Turkey. \n",
     "\n",
@@ -2941,6 +2945,16 @@
     "print()\n",
     "for label, score in zip(labels, recall):\n",
     "    print(\"Recall for Label\", label, \":\", score)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 3: Some More Experimentation\n",
+    "\n",
+    "...."
    ]
   },
   {
