--- a/RetailPromotionPrediction.ipynb
+++ b/RetailPromotionPrediction.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Part 1:**\n",
     "\n",
-    "Our initial problem statement focuses on predicting whether or not we should market to a customer based on the amount of money they spent in a certain category when focusing on promotional material for that category. However, we soon run into issues regarding [] and have to take a different approach to tackling this overall task. \n",
+    "Our initial problem statement focuses on predicting whether or not we should market to a customer based on the amount of money they spent in a certain category when focusing on promotional material for that category. However, we soon run into issues regarding the calculation and assignment of our target class data leakage and have to take a different approach to tackling this overall task.  \n",
     "\n",
     "**Part 2:**\n",
     "\n",
